--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -54,207 +54,212 @@
             /* 나중에 값 변경할 것 */
             margin: 0px auto 0px auto;
             text-align: center;
-        /* -------------------------------------- 여기까지 김장원 -------------------------------------- */
-        /* 메인 배너 전체 사이즈와 정렬 */
-        #main_banner {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            width: 1320px;
-            height: 300px;
-}
-
-        /* 메인 타이틀 글자 설정 */
-        #main_title {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-
-            font-size: 120px;
-            /* font-weight: bold; */
-            letter-spacing: 4px;
-
-            font-family: 'Rampart One', cursive;
-            color: black;
-            /* text-shadow: -1px 0 #000, 0 2.5px #000, 1.5px 0 #000, 0 -1px #000; */
         }
 
-        /* 네비게이션바 크기, 색*/
-        #nav {
-            width: 1320px;
-            height: 50px;
-            background-color: #FF9494;
+            /* -------------------------------------- 여기까지 김장원 -------------------------------------- */
+            /* 메인 배너 전체 사이즈와 정렬 */
+            #main_banner {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
 
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            padding-top: 15px;
-        }
+                width: 1320px;
+                height: 300px;
+            }
 
-        #nav>ol {
-            display: flex;
-            flex-direction: row;
-            margin-right: 40px;
-        }
+            /* 메인 타이틀 글자 설정 */
+            #main_title {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
 
-        #nav>ol>li {
-            display: flex;
-            flex-direction: row;
-            margin: 0px 53px 0px 53px;
-            list-style: none;
-            font-size: 28px;
-        }
+                font-size: 120px;
+                /* font-weight: bold; */
+                letter-spacing: 4px;
 
-        #nav>ol>li>a {
-            color: white;
-            text-decoration: none;
-        }
+                font-family: 'Rampart One', cursive;
+                color: black;
+                /* text-shadow: -1px 0 #000, 0 2.5px #000, 1.5px 0 #000, 0 -1px #000; */
+            }
 
-        #nav>ol>li>a:hover {
-            text-decoration: none;
-            color: black;
-        }
+            /* 네비게이션바 크기, 색*/
+            #nav {
+                width: 1320px;
+                height: 50px;
+                background-color: #FF9494;
 
-        /* 백설이 탑으로 가는 버튼 */
-        #top100{
-            width: 50px;
-            height: 50px;
-            border: 1px solid black;
-            z-index: 10;
-            display: flex;
-            position: fixed;
-            bottom: 20px;
-            right:20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                padding-top: 15px;
+            }
 
-            width: 10px;
-            height: 10px;
-            border: 1px solid black;
+            #nav>ol {
+                display: flex;
+                flex-direction: row;
+                margin-right: 40px;
+            }
 
-            z-index: 10;
+            #nav>ol>li {
+                display: flex;
+                flex-direction: row;
+                margin: 0px 53px 0px 53px;
+                list-style: none;
+                font-size: 28px;
+            }
 
-            display: flex;
-            position: fixed;
-            bottom: 110px;
-            right: 200px;
+            #nav>ol>li>a {
+                color: white;
+                text-decoration: none;
+            }
 
-            border: 0px;      
-        }
+            #nav>ol>li>a:hover {
+                text-decoration: none;
+                color: black;
+            }
 
-        #top100 > img {
-            width: 100px;
-            height: 100px;
-            border-radius: 15px;
-        }
+            /* 백설이 탑으로 가는 버튼 */
+            #top100 {
+                width: 50px;
+                height: 50px;
+                border: 1px solid black;
+                z-index: 10;
+                display: flex;
+                position: fixed;
+                bottom: 20px;
+                right: 20px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
 
-        #top100 > p {
-            font-size: 20px;
-            text-decoration: none;
-        }
+                width: 10px;
+                height: 10px;
+                border: 1px solid black;
 
-        #top1 {
-            text-decoration: none;
-            color: black;
-        }
+                z-index: 10;
 
-        #top1>a:hover {
-            color: black;
-        }
-        
-        /* 백설이 애니메이션 관련코드(코딩네컷 완주보상) */
-        @keyframes rtanee {
-        0% {
-          bottom: 0px;
-        }
-        100% {
-          bottom: 100px;
-        }
-      }
+                display: flex;
+                position: fixed;
+                bottom: 110px;
+                right: 200px;
 
-      .white {
-        position: fixed;
-        /* right: 10px;
+                border: 0px;
+            }
+
+            #top100>img {
+                width: 100px;
+                height: 100px;
+                border-radius: 15px;
+            }
+
+            #top100>p {
+                font-size: 20px;
+                text-decoration: none;
+            }
+
+            #top1 {
+                text-decoration: none;
+                color: black;
+            }
+
+            #top1>a:hover {
+                color: black;
+            }
+
+            /* 백설이 애니메이션 관련코드(코딩네컷 완주보상) */
+            @keyframes rtanee {
+                0% {
+                    bottom: 0px;
+                }
+
+                100% {
+                    bottom: 100px;
+                }
+            }
+
+            .white {
+                position: fixed;
+                /* right: 10px;
         bottom: 10px; */
 
-        /* 아이콘 이동 애니메이션 관련 설정 */
-        animation-name: rtanee;
-        animation-duration: 2s;
-        animation-duration: linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-        animation-fill-mode: forwards;
-      }
+                /* 아이콘 이동 애니메이션 관련 설정 */
+                animation-name: rtanee;
+                animation-duration: 2s;
+                animation-duration: linear;
+                animation-iteration-count: infinite;
+                animation-direction: alternate;
+                animation-fill-mode: forwards;
+            }
 
-      .white {
-        width: 150px;
-        cursor: pointer;
-      }
+            .white {
+                width: 150px;
+                cursor: pointer;
+            }
 
-        /* -------------------------------------- 여기까지 김장원 -------------------------------------- */
+            /* -------------------------------------- 여기까지 김장원 -------------------------------------- */
 
-        /* -------------------------------------- 아래는 이은비 -------------------------------------- */
-        .teamtitle {
-            text-align: center;
-        }
+            /* -------------------------------------- 아래는 이은비 -------------------------------------- */
+            .teamtitle {
+                text-align: center;
+            }
 
-        .team-body {
-            background-color: grey;
-            width: 300px;
-            height: 100px;
-            margin: 20px auto 80px auto;
-        }
+            .team-body {
+                background-color: grey;
+                width: 300px;
+                height: 100px;
+                margin: 20px auto 80px auto;
+            }
 
-        .card-header {
-            font-size: x-large;
-            text-align: center;
-        }
+            .card-header {
+                font-size: x-large;
+                text-align: center;
+            }
 
-        .card-text {
-            text-align: center;
-        }
+            .card-text {
+                text-align: center;
+            }
 
-        .team-text {
-            margin: 20px auto 20px auto;
-        }
+            .team-text {
+                margin: 20px auto 20px auto;
+            }
 
-        .card-title {
-            color: white;
-            text-align: center;
-            background-color: dimgrey;
-        }
+            .card-title {
+                color: white;
+                text-align: center;
+                background-color: dimgrey;
+            }
 
-        .teamintro {
-            margin-top: 0px;
-            margin-bottom: 20px;
-        }
-        /* -------------------------------------- 여기까지는 이은비 -------------------------------------- */
+            .teamintro {
+                margin-top: 0px;
+                margin-bottom: 20px;
+            }
 
-        /* -------------------------------------- 아래는 이현경님 -------------------------------------- */
-        .title {
-            padding: 30px;
-        }
+            /* -------------------------------------- 여기까지는 이은비 -------------------------------------- */
 
-        .name {
-            margin: auto;
-        }
+            /* -------------------------------------- 아래는 이현경님 -------------------------------------- */
+            .title {
+                padding: 30px;
+            }
 
-        .card {
-            border-color: white;
-        }
+            .name {
+                margin: auto;
+            }
 
-        .img {
-            width: 200px;
-            height: 200px;
-            border-radius: 100%;
-        }
-        /* -------------------------------------- 아래는 이현경님 -------------------------------------- */
+            .card {
+                border-color: white;
+            }
+
+            .img {
+                width: 200px;
+                height: 200px;
+                border-radius: 100%;
+            }
+
+            /* -------------------------------------- 아래는 이현경님 -------------------------------------- */
     </style>
 
     <script>
@@ -335,11 +340,11 @@
         <!-- 김장원 끝-->
 
         <!-- 이은비 시작-->
-       <div class="teamintro">
-        <img src="/static/image/title1_2.png" >  <!-- style = "margin : 109px 200px auto 200px;" -->
+        <div class="teamintro">
+            <img src="/static/image/title1_2.png"> <!-- style = "margin : 109px 200px auto 200px;" -->
             <div class="team-body" id="bookmarkA">
                 <p>안녕하세요
-                <br>저희는 E 1명과 I 4명으로 구성된 화목한 5남매(+1) 입니다
+                    <br>저희는 E 1명과 I 4명으로 구성된 화목한 5남매(+1) 입니다
                 <p id="imoji">🙋🏻‍♂️🧚🏻‍♂️👩🏻🐶👩🏻‍🦰👰🏻‍♀️</p>
                 <br>모두 비전공자이고 나이도 다르지만, 프로젝트를 완성하고자
                 <br>의기투합하여 한 마음 한 뜻으로 똘똘 뭉쳤습니다 V
@@ -394,8 +399,9 @@
             <div class="row row-cols-1 row-cols-md-5 g-2">
                 <div class="col">
                     <div class="card h-100">
-                    <a href= {{url_for('sub1')}}>
-                        <img src="https://ca.slack-edge.com/T043597JK8V-U053UK80VR8-cbc4d9e1783b-512" class="img" alt="..."></a>
+                        <a href={{url_for('sub1')}}>
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U053UK80VR8-cbc4d9e1783b-512" class="img"
+                                alt="..."></a>
                         <div class="name">
                             <h3>김희석</h3>
                         </div>
@@ -403,9 +409,10 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <a href= {{url_for('sub2')}}>
-                            <img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512" class="img" alt="..."></a>
-                          <br>
+                        <a href={{url_for('sub1')}}>
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U051WD9LCNP-45ff45329ac6-512" class="img"
+                                alt="..."></a>
+                        <br>
                         <div class="name">
                             <h3>이은비</h3>
                         </div>
@@ -413,10 +420,11 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <a href= {{url_for('sub3')}}>
-                            <img src="https://ca.slack-edge.com/T043597JK8V-U0532LT9LLE-58e265f5a665-512" class="img" alt="..."></a>
+                        <a href={{url_for('sub1')}}>
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U0532LT9LLE-58e265f5a665-512" class="img"
+                                alt="..."></a>
 
-                          <br>
+                        <br>
                         <div class="name">
                             <h3>이현경</h3>
                         </div>
@@ -424,9 +432,10 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <a href= {{url_for('sub4')}}>
-                            <img src="https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512" class="img" alt="..."></a>
-                          <br>
+                        <a href={{url_for('sub1')}}>
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U052A5UUG06-fd387358fc87-512" class="img"
+                                alt="..."></a>
+                        <br>
                         <div class="name">
                             <h3>김장원</h3>
                         </div>
@@ -434,9 +443,10 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <a href= {{url_for('sub5')}}>
-                            <img src="https://ca.slack-edge.com/T043597JK8V-U053QSM8MT4-e435cca492ea-512" class="img"alt="..."></a>
-                          <br>
+                        <a href={{url_for('sub1')}}>
+                            <img src="https://ca.slack-edge.com/T043597JK8V-U053QSM8MT4-e435cca492ea-512" class="img"
+                                alt="..."></a>
+                        <br>
                         <div class="name">
                             <h3>임수영</h3>
                         </div>
@@ -460,7 +470,8 @@
                 <input type="text" class="form-control" id="name" placeholder="닉네임" />
             </div>
             <div class="form-floating">
-                <textarea class="form-control" placeholder="방명록을 작성하세요" id="comment"></textarea> <!-- style="height: 100px" -->
+                <textarea class="form-control" placeholder="방명록을 작성하세요" id="comment"></textarea>
+                <!-- style="height: 100px" -->
             </div>
             <button onclick="save_comment()" type="button" class="btn btn-dark">
                 댓글 남기기
@@ -495,4 +506,5 @@
     </div>
     <!-- 김희석 끝 -->
 </body>
+
 </html>
